# Booking-Blackboard-Multi-Agent-Pattern

./: .gitignore  README.md  main.py  pyproject.toml
src/: audit.py  controller.py  main.py  policy.py  state.py  visualize_graph.py
src/agents/: __init__.py  booking.py  booking_agent.py  code_review_agent.py  document_verification_agent.py  parse_request_agent.py  parse_user_request.py  risk_agent.py
