[project]
name = "booking-lab"
version = "0.1.0"
description = "Booking multi-agent lab demonstrating the Blackboard architecture pattern"
readme = "README.md"
authors = [
    { name = "Idan Beck", email = "idanbeck88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "langgraph>=1.2.6",
]
[tool.uv]
package = true


[project.scripts]
app = "main:main"